# LLP-lab1

./: CMakeLists.txt  README.md  lab1.docx
include/: crud.h  executor.h  file.h  file_info.h  node.h  settings.h  test.h  wrapper.h
src/: crud.c  executor.c  file.c  main.c  test.c  wrapper.c
